@@ -2,7 +2,7 @@
 # Kernel/System/Ticket.pm - all ticket functions
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: Ticket.pm,v 1.345 2008/09/29 04:34:49 martin Exp $
+# $Id: Ticket.pm,v 1.346 2008/09/29 05:13:03 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -38,7 +38,7 @@ use Kernel::System::LinkObject;
 use Kernel::System::Valid;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.345 $) [1];
+$VERSION = qw($Revision: 1.346 $) [1];
 
 =head1 NAME
 
@@ -4099,16 +4099,18 @@ sub TicketSearch {
 
     # get tickets pending older then x minutes
     if ( $Param{TicketPendingTimeOlderMinutes} ) {
-        my $Time
-            = $Self->{TimeObject}->SystemTime() - ( $Param{TicketPendingTimeOlderMinutes} * 60 );
-        $Param{TicketPendingTimeOlderDate} = $Time;
+        my $Time = $Self->{TimeObject}->SystemTime();
+        $Param{TicketPendingTimeOlderDate} = $Self->{TimeObject}->SystemTime2TimeStamp(
+            SystemTime => $Time - ( $Param{TicketPendingTimeOlderMinutes} * 60 ),
+        );
     }
 
     # get tickets pending newer then x minutes
     if ( $Param{TicketPendingTimeNewerMinutes} ) {
-        my $Time
-            = $Self->{TimeObject}->SystemTime() - ( $Param{TicketPendingTimeNewerMinutes} * 60 );
-        $Param{TicketPendingTimeNewerDate} = $Time;
+        my $Time = $Self->{TimeObject}->SystemTime();
+        $Param{TicketPendingTimeNewerDate} = $Self->{TimeObject}->SystemTime2TimeStamp(
+            SystemTime => $Time - ( $Param{TicketPendingTimeNewerMinutes} * 60 ),
+        );
     }
 
     # get pending tickets older then xxxx-xx-xx xx:xx date
@@ -6656,6 +6658,6 @@ did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 
 =head1 VERSION
 
-$Revision: 1.345 $ $Date: 2008/09/29 04:34:49 $
+$Revision: 1.346 $ $Date: 2008/09/29 05:13:03 $
 
 =cut
